# transcriber

./: .gitignore  CMakeLists.txt  LICENSE  README.md  org.xvoice.Controller.service  transcriber.desktop  xwindows-voice-to-text-srs.md
assets/: gear.xpm  greenmic.xpm  redmic.xpm
packaging/: build-deb.sh  download-model.sh
packaging/debian/: changelog  control  install  postinst  postrm  prerm  rules
src/: app.h  app_audio.c  app_audio.h  app_clipboard.c  app_clipboard.h  app_config.c  app_config.h  app_config_dialog.c  app_config_dialog.h  app_controller.c  app_dbus.c  app_dbus.h  app_gpu.c  app_gpu.h  app_model_info.c  app_model_info.h  app_tray.c  app_tray.h  app_whisper.c  app_whisper.h  app_window.c  app_window.h  main.c
